--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="header-content-inner">
                 <h1>What is this app?</h1>
                 <hr>
-                <p><strong>Senior Design, Team C -</strong> This app is a mathematical algorithm of the nueronetwork of how the brain reacts, and equates out how a common English word should be pronounced. On each words, the user must give the best recording of the word to our algorithm hosted on the cloud, and get a score ranging from 0 - 1 (the closer it is to 1, the better the pronounciation was) back. The goal of the app is to help non - native English speakers be able to pronounce common words properly, and our goal is to bring this capability into fruition for you.</p>
+                <p><strong>Senior Design, Team C -</strong> Our English Language App assists users in improving their pronounciation of various english words. For each word, the user provides a recording of themselves saying that word. They then send this recording to our application server where it is compared against native speakers' recordings. The user recieves a score reflecting this comparison, ranging from 0 - 1 (the closer it is to 1, the better the pronounciation was).</p>
             </div>
         </div>
     </header>
@@ -162,7 +162,6 @@
                     <ul style="text-align: left;">
                         <li>User is currently using Android smart phone and has basic knowledge to use phone</li>
                         <li>User must be able to speak into the smart phone</li>
-                        <li>The system contains volatile storage through SQL</li>
                         <li>The system will be forking a connection into the cloud based SQL server</li>
                         <li>Network issues will be ignored</li>
                         <li>Sound issues will be ignored</li>
@@ -174,8 +173,8 @@
 
                     <ul style="text-align: left;">
                         <li>Team lacks professional level android developement skills</li>
-                        <li>Team schedule too aggressive</li>
-                        <li>Team is not versatile in database management and programming (SQL) skills</li>
+                        <li>System not designed to scale up</li>
+                        <li>System uses mean aggregations to compare audio clips, loses some granularity</li>
                     </ul>
                     </p>
                     </div>
